Fixing the price discount on mobile

--- a/src/app/site/product/components/desktop-product/desktop-product.component.css
+++ b/src/app/site/product/components/desktop-product/desktop-product.component.css
@@ -55,7 +55,7 @@
 }
 
 /* 1368px */
-@media (max-width: 600px) {
+@media (max-width: 960px) {
   .photos div {
     padding: 0 4px 6px 4px;
     width: calc(100% - 8px);
