--- a/src/styles.css
+++ b/src/styles.css
@@ -610,7 +610,7 @@ dp-date-picker.dp-material .dp-picker-input {
   border: 1px solid black !important;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 960px) {
   .mat-button-toggle-label-content {
     width: 69px !important;
     line-height: 48px !important;
@@ -829,7 +829,7 @@ mat-panel-title {
   overflow: visible !important;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 960px) {
   .mat-button-toggle-label-content {
     width: calc(100vw / 7) !important;
     line-height: calc(100vw / 9) !important;
@@ -1100,7 +1100,7 @@ p {
   position: relative;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 960px) {
   .overridden::after {
     border-bottom: 1px solid red;
     content: "";
@@ -1124,7 +1124,7 @@ p {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 960px) {
   .overridden::after {
     border-bottom: 6px solid rgba(255, 0, 0, 0.7);
     border-radius: 10px;
